Corrected project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-vite-react",
+  "name": "random-quote-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
